--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "async": "^1.4.2",
-    "mysql": "^2.10.0"
+    "mysql": "^2.10.0",
+    "mysql-wrap": "^0.5.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
