--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "supertest": "^1.1.0",
     "supertest-as-promised": "^2.0.2"
   },
+  "peerDependencies": {
+    "booljs-api": "0.3.x"
+  },
   "directories": {
     "example": "example",
     "test": "test"
