--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 services: mysql
 language: node_js
-node_js:
-  - 4.0
 before_script:
   - mysql -e 'create database db_test;'
+before_install:
+  - npm i -g npm@latest
+node_js:
+  - 4.0
+  - 5.0
+  - 6.0
 install:
-  - npm install
   - npm install bool.js@latest
+  - npm install
