--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_script:
 node_js:
   - lts/*
 install:
-  - npm install --no-save bool.js@latest
+  - npm install --no-save booljs@latest
   - npm install
