--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   "homepage": "https://github.com/BoolJS/booljs-mysql#readme",
   "peerDependencies": {
     "mysql2": "*",
-    "booljs.api": "0.5.x"
+    "@booljs/api": "0.6.x"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
@@ -42,9 +42,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^5.2.0",
     "supertest": "^3.3.0"
-  },
-  "dependencies": {
-    "booljs": "^0.7.16"
   },
   "publishConfig": {
     "access": "public"
